fix contrast issues

--- a/css/main.css
+++ b/css/main.css
@@ -1,8 +1,10 @@
 body {
+  /* change the color for better contrast */
   font-family: 'Roboto', Helvetica, sans-serif;
-  background-color: grey;
+  background-color: white;
   margin: 0;
   padding: 0;
+  color:black;
 }
 
 h1,
@@ -12,6 +14,7 @@ h4,
 h5,
 h6 {
   font-family: 'Stick No Bills', 'Roboto', Helvetica, sans-serif;
+  color:black;
 }
 
 .container {
@@ -44,12 +47,22 @@ img {
   font-size: 1.25rem;
 }
 
+/* better focus styles for nav */
+.main-nav ul li a,
+form input,
+form textarea,
+form button:focus {
+  /* add focus outline */
+  outline: 2px solid darkolivegreen; 
+}
+
 form input,
 form textarea {
   display: block;
   width: 100%;
   margin-bottom: 1rem;
   padding: .5rem 1rem;
+  color:black;
 }
 
 form textarea {
@@ -59,11 +72,15 @@ form textarea {
   resize: none;
 }
 
+/* fix the color for better contract */
 form button {
   background: none;
+  background-color: black;
   border: 2px solid black;
   padding: 1rem;
   text-transform: uppercase;
+  color: white;
+
 }
 
 .site-footer {
